name:           priority-queue
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/my-project#readme>
homepage:       https://github.com/githubuser/my-project#readme
bug-reports:    https://github.com/githubuser/my-project/issues
author:         Piotr Boszczyk & Piotr Szczerbiński
maintainer:     example@example.com
copyright:      2018 
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

library
  hs-source-dirs:
    src
  build-depends:
      base >=4.7 && <5
  exposed-modules:
      Data.PriorityQueueBT,
      Data.PriorityQueueL
  other-modules:
      Paths_priority_queue
  default-language: Haskell2010

executable priority-queue-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && <5
                     , priority-queue
                     , parallel
                     , random
                     , time
  other-modules:       Paths_priority_queue
  default-language:    Haskell2010

test-suite priority-queue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             PriorityQueueTestsBT.hs
  build-depends:       base  >= 4.7 && <5
                     , priority-queue
                     , QuickCheck
                     , HUnit

 ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , my-project
  other-modules:
       Paths_priority_queue
  default-language: Haskell2010
